# wagtail-sb-admin-interface

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tbump.toml
demoproject/demoproject/settings/: base.py  dev.py
demoproject/demoproject/templates/: base.html
src/wagtail_sb_admin_interface/: __init__.py  admin.py  apps.py  cache.py  compat.py  models.py  settings.py  wagtail_hooks.py
src/wagtail_sb_admin_interface/migrations/: 0001_initial.py  0002_remove_theme_color_input_focus_and_more.py  0003_remove_theme_sidebar_logo_background_color.py  0004_alter_theme_color_critical_alter_theme_color_info_and_more.py  0005_rename_sidebar_logo_mobile_theme_sidebar_logo_collapsed.py  0006_theme_sidebar_logo_background_color.py
src/wagtail_sb_admin_interface/templates/wagtail_sb_admin_interface/: favicon.html  foldable-apps.html  language_chooser.html  related-modal.html
src/wagtail_sb_admin_interface/templates/wagtail_sb_admin_interface/css/: admin-interface-fix.css  form-controls.css  list-filter-dropdown.css  recent-actions.css
src/wagtail_sb_admin_interface/templates/wagtailadmin/: base.html
src/wagtail_sb_admin_interface/templatetags/: wagtail_sb_admin_interface_tags.py
