[tool.poetry]
name = "wagtail-sb-admin-interface"
version = "0.3.0"
description = "Social Networks settings for wagtail sites."
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/softbutterfly/wagtail-sb-admin-interface"
repository = "https://github.com/softbutterfly/wagtail-sb-admin-interface"
documentation = "https://github.com/softbutterfly/wagtail-sb-admin-interface/wiki"
keywords = ["Softbutterfly", "Django", "Migrations"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "wagtail_sb_admin_interface", from = "src" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/wagtail-sb-admin-interface/archive/v0.3.0.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/wagtail-sb-admin-interface/issues"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
django = "< 5.0"
django-colorfield = "<1.0.0"
wagtail = "< 5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
bandit = "^1.7.4"
black = "^23.1.0"
codecov = "^2.1.12"
coverage = "^7.1.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.0.1"
pre-commit = "^3.0.4"
pydocstyle = "^6.3.0"
pylint = "^2.16.2"
pylint-django = "^2.5.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-vcr = "^1.0.2"
python-dotenv = "^0.21.1"
tbump = "^6.9.0"
tox = "^4.4.6"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
